--- a/.github/workflows/wilco-actions.yml
+++ b/.github/workflows/wilco-actions.yml
@@ -38,6 +38,6 @@ jobs:
 
       - name: Wilco checks
         id: Wilco
-        uses: trywilco/actions@main
+        uses: trywilco/actions@niv-machine
         with:
           engine: ${{ secrets.WILCO_ENGINE_URL }}
